# Lumen_Voice_Agent

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  alembic.ini  config.yaml  pyproject.toml  pytest.ini
app/: admin_config_service.py  agent_doc_processor.py  agent_rag_service.py  agent_repo.py  config.py  conversation_repo.py  database.py  deepgram_service.py  doc_processor.py  document_repo.py  elevenlabs_service.py  hr_repo.py  hr_scheduler.py  llm_service.py  main.py  memory_repo.py  message_repo.py  models.py  openai_tts_service.py  openai_whisper_service.py  rag_service.py  sentiment_service.py  twilio_call_service.py  twilio_repo.py  twilio_webhook_config.py  user_kb_rag.py  user_kb_repo.py  user_twilio_settings_repo.py  vad_service.py  websocket_manager.py
frontend/: package-lock.json  package.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/hooks/: useVoiceAgent.ts
frontend/lib/: api.ts  auth.ts
migrations/: env.py
migrations/versions/: 0001_initial_schema.py  0002_add_sentiment_to_conversations.py  0003_add_agents.py  0004_add_agent_documents.py  0005_add_kb_permissions.py  0006_add_user_kb.py  0007_add_admin_config.py  0008_add_agent_functions.py  0009_agent_ui_fields.py  0010_agent_selected_kb_docs.py  0011_twilio_phone_numbers.py  0012_user_twilio_settings.py  0013_hr_candidates_interviews.py  0014_agent_hr_instructions.py  0015_twilio_number_sid.py
tests/: conftest.py  test_agents.py  test_auth.py  test_database.py  test_health.py  test_ingest.py  test_protected.py  test_services.py  test_twilio_hr.py
(+7 files in other folders)
