[project]
name = "lumen-agent-backend"
version = "0.1.0"
description = "Voice AI agent backend — Deepgram STT, ElevenLabs TTS, OpenAI LLM, Supabase RAG"
requires-python = ">=3.11"
dependencies = [
    "fastapi==0.115.0",
    "uvicorn[standard]==0.30.6",
    "httpx==0.27.2",
    "PyJWT==2.9.0",
    "cryptography==43.0.1",
    "python-dotenv==1.0.1",
    "pydantic[email]==2.9.2",
    "supabase==2.9.1",
    "openai==1.51.0",
    "mistune==3.0.2",
    "deepgram-sdk==3.7.7",
    "elevenlabs==1.9.0",
    "numpy==1.26.4",
    "websockets==13.1",
    "python-multipart==0.0.12",
    "aiofiles>=23.0",  # required by FastAPI StaticFiles
    "torch>=2.0.0",
    "pyyaml>=6.0",
    "sqlalchemy>=2.0",
    "alembic>=1.13",
    "psycopg2-binary>=2.9",
    "torchaudio",
    "pymupdf>=1.24.0",
    "python-docx>=1.1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-mock>=3.14",
]
